--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "md-hopper",
-  "version": "1.0.0-alpha",
+  "version": "1.0.0-alpha.1",
   "description": "",
   "type": "module",
   "bin": {
@@ -16,6 +16,12 @@
     "url": "https://github.com/cilly-yllic/md-hopper/issues"
   },
   "homepage": "https://github.com/cilly-yllic/md-hopper#readme",
+  "keywords": [
+    "markdown",
+    "readme",
+    "md",
+    "links"
+  ],
   "scripts": {
     "prepare": "husky",
     "jest": "jest",
@@ -30,20 +36,17 @@
     "generate": "tsx --tsconfig ./tsconfig.zx.json ./tools/generate-alias.zx.ts",
     "ci:update-version": "tsx --tsconfig ./tsconfig.zx.json ./tools/update-version.zx.ts",
     "md:generate": "tsx --tsconfig ./tsconfig.zx.json ./tools/generate-md.ts",
-
     "//--- test ---//": "",
     "test": "run-s test:*",
     "test:lint": "npm run lint",
     "test:prettier": "npm run prettier:check",
     "test:jest": "npm run jest",
-
     "//--- build ---//": "",
     "build": "run-s build:*",
     "build:test": "npm run test",
     "build:clean": "npm run clean",
     "build:tsc": "npm run tsc",
     "build:generate": "npm run generate",
-
     "//--- publish ---//": "",
     "publish:build": "run-s build:{clean,tsc,generate}"
   },
@@ -61,6 +64,7 @@
     "@actions/github": "^6.0.0",
     "chalk": "^5.3.0",
     "commander": "^12.0.0",
+    "marked": "^12.0.2",
     "minimatch": "^9.0.4",
     "my-gadgetry": "^1.1.2",
     "zx": "^8.1.0"
