--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "md-hopper",
-  "version": "1.0.0-alpha.4",
+  "version": "1.0.0-alpha.5",
   "description": "",
   "type": "module",
   "bin": {
@@ -36,17 +36,20 @@
     "generate": "tsx --tsconfig ./tsconfig.zx.json ./tools/generate-alias.zx.ts",
     "ci:update-version": "tsx --tsconfig ./tsconfig.zx.json ./tools/update-version.zx.ts",
     "md:generate": "tsx --tsconfig ./tsconfig.zx.json ./tools/generate-md.ts",
+
     "//--- test ---//": "",
     "test": "run-s test:*",
     "test:lint": "npm run lint",
     "test:prettier": "npm run prettier:check",
     "test:jest": "npm run jest",
+
     "//--- build ---//": "",
     "build": "run-s build:*",
     "build:test": "npm run test",
     "build:clean": "npm run clean",
     "build:tsc": "npm run tsc",
     "build:generate": "npm run generate",
+
     "//--- publish ---//": "",
     "publish:build": "run-s build:{clean,tsc,generate}"
   },
@@ -64,9 +67,12 @@
     "@actions/github": "^6.0.0",
     "chalk": "^5.3.0",
     "commander": "^12.1.0",
+    "inquirer": "^9.2.23",
+    "inquirer-table-input": "^0.0.3",
     "marked": "^12.0.2",
     "minimatch": "^9.0.4",
     "my-gadgetry": "^1.2.5",
+    "uuid": "^9.0.1",
     "zx": "^8.1.2"
   },
   "devDependencies": {
@@ -74,7 +80,9 @@
     "@babel/preset-env": "^7.24.6",
     "@babel/preset-typescript": "^7.24.6",
     "@eslint/js": "^8.57.0",
+    "@types/inquirer": "^9.0.7",
     "@types/jest": "^29.5.12",
+    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^7.9.0",
     "@typescript-eslint/parser": "^7.9.0",
     "babel-jest": "^29.7.0",
@@ -89,13 +97,13 @@
     "jest": "^29.7.0",
     "lint-staged": "^15.2.5",
     "npm-run-all2": "^6.2.0",
-    "prettier": "^3.2.5",
+    "prettier": "^3.3.0",
     "ts-jest": "^29.1.4",
     "ts-node": "^10.9.2",
     "tsc-alias": "^1.8.10",
-    "tsx": "^4.11.0",
+    "tsx": "^4.11.2",
     "typescript": "^5.4.5",
-    "typescript-eslint": "^7.11.0"
+    "typescript-eslint": "^7.12.0"
   },
   "files": [
     "cli",
