--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "md-hopper",
-  "version": "1.0.0-alpha.5",
+  "version": "1.0.0-alpha.6",
   "description": "",
   "type": "module",
   "bin": {
@@ -60,7 +60,7 @@
   "engines": {
     "node": ">=19.0.0"
   },
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "@actions/core": "^1.10.1",
     "@actions/exec": "^1.1.1",
