--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "md-hopper",
-  "version": "1.0.0-alpha.6",
+  "version": "1.0.0-alpha.7",
   "description": "",
   "type": "module",
   "bin": {
@@ -68,7 +68,7 @@
     "chalk": "^5.3.0",
     "commander": "^12.1.0",
     "inquirer": "^9.2.23",
-    "inquirer-table-input": "^0.0.3",
+    "inquirer-plugins": "^1.0.0-alpha.2",
     "marked": "^12.0.2",
     "minimatch": "^9.0.4",
     "my-gadgetry": "^1.2.5",
